# AOI-defects-detection

./: CMakeLists.txt  README.md  main.cpp
